--- a/Superposition_and_Symmetry/Superposition_and_Symmetry.tex
+++ b/Superposition_and_Symmetry/Superposition_and_Symmetry.tex
@@ -88,7 +88,7 @@ Superposition problems are often simplified by recognizing a symmetry. For examp
 
 \section{Problem}
 
-Charge $q$1 = +q$ is at $(x, y) = (a, 0)$, charge $q$2 = +q$ is at $(x, y) = (-a, 0)$, and charge $q$3 = -q$ is at $(x, y) = (0, a)$. Assume that $q$ is a positive number.
+Charge $q_1 = +q$ is at $(x, y) = (a, 0)$, charge $q_2 = +q$ is at $(x, y) = (-a, 0)$, and charge $q_3 = -q$ is at $(x, y) = (0, a)$. Assume that $q$ is a positive number.
 
 \begin{enumerate}
 
@@ -120,34 +120,34 @@ In the following,
 
 \begin{enumerate}
 
-  \item[3.] Find the electric field at the origin due to $q$1$. Write your answer in the form $\bfvec{E}$1=E${x1}\ihat + E${y1}\jhat$.
+  \item[3.] Find the electric field at the origin due to $q_1$. Write your answer in the form $\bfvec{E}_1=E_{x1}\ihat + E_{y1}\jhat$.
 
             \ifsolutions
-            {\bf Answer}: $\ds\bfvec{E}$1=-\frac{kq}{a^2}\ihat$
+            {\bf Answer}: $\ds\bfvec{E}_1=-\frac{kq}{a^2}\ihat$
             \else
 
             \vskip 72pt
             \fi
 
-  \item[4.] Find the electric field at the origin due to $q$2$. Write your answer in the form $\bfvec{E}$2=E${x2}\ihat + E${y2}\jhat$.
+  \item[4.] Find the electric field at the origin due to $q_2$. Write your answer in the form $\bfvec{E}_2=E_{x2}\ihat + E_{y2}\jhat$.
 
             \ifsolutions
-            {\bf Answer}: $\ds\bfvec{E}$2=+\frac{kq}{a^2}\ihat$
+            {\bf Answer}: $\ds\bfvec{E}_2=+\frac{kq}{a^2}\ihat$
             \else
 
             \vskip 72pt
             \fi
 
-  \item[5.] Find the electric field at the origin due to $q$3$. Write your answer in the form $\bfvec{E}$3=E${x3}\ihat + E${y3}\jhat$.
+  \item[5.] Find the electric field at the origin due to $q_3$. Write your answer in the form $\bfvec{E}_3=E_{x3}\ihat + E_{y3}\jhat$.
 
             \ifsolutions
-            {\bf Answer}: $\ds\bfvec{E}$3=+\frac{kq}{a^2}\jhat$
+            {\bf Answer}: $\ds\bfvec{E}_3=+\frac{kq}{a^2}\jhat$
             \else
 
             \vskip 72pt
             \fi
 
-  \item[6.] Find the total electric field at the origin by adding $\bfvec{E}$1$, $\bfvec{E}$2$, and $\bfvec{E}$3$. Write your answer in the form $\bfvec{E}=E${x}\ihat + E${y}\jhat$.
+  \item[6.] Find the total electric field at the origin by adding $\bfvec{E}_1$, $\bfvec{E}_2$, and $\bfvec{E}_3$. Write your answer in the form $\bfvec{E}=E_{x}\ihat + E_{y}\jhat$.
 
             \ifsolutions
             {\bf Answer}: $\ds\bfvec{E}=+\frac{kq}{a^2}\jhat$
@@ -165,7 +165,7 @@ In the following,
             \vskip 72pt
             \fi
 
-  \item[8.] Find the electric field at the origin if charge $q$1=2q$ (instead of $q$).
+  \item[8.] Find the electric field at the origin if charge $q_1=2q$ (instead of $q$).
 
             \ifsolutions
             {\bf Answer}: $\ds\bfvec{E}=-\frac{kq}{a^2}\ihat+\frac{kq}{a^2}\jhat$
@@ -174,7 +174,7 @@ In the following,
             \vskip 72pt
             \fi
 
-  \item[9.] Find the electric field at the origin if charge $q$1=-2q$ (instead of $q$).
+  \item[9.] Find the electric field at the origin if charge $q_1=-2q$ (instead of $q$).
 
             \ifsolutions
             {\bf Answer}: $\ds\bfvec{E}=+\frac{3kq}{a^2}\ihat+\frac{kq}{a^2}\jhat$
