--- a/rhat/rhat.tex
+++ b/rhat/rhat.tex
@@ -82,10 +82,14 @@
 
 \section{The $\rhat$ Unit Vector}
 
-One approach to finding the electric force between two charges is to use
-$F=k{|q_1q_2|}/{r^2}$ to find the magnitude and a diagram and trigonometry to write $\bfvec{F}$ in the form $\bfvec{F}=F_x\ihat + F_y\jhat$.
+One approach to finding the electric force between two charges and the electric field due to a point charge is to use
+$F=k{|q_1q_2|}/{r^2}$ to find the magnitude and a diagram to write $\bfvec{F}$ in the form $\bfvec{F}=F_x\ihat + F_y\jhat$.
 
-An alternative approach is to use an equation for electric force using a unit vector $\rhat$:
+An alternative approach is to use an equation for electric force and electric field using a unit vector $\rhat$. This approach is sometimes used for finding the electric field due to a continuous charge distribution. In addition, the $\rhat$ unit vector is often used when finding the magnetic field using the Biot--Savart law.
+
+\subsection{Electric Force}
+
+The equation for electric force (Coulomb's law) using a unit vector $\rhat$ is
 
 $$\bfvec{F}_{q_1\text{ on }q_2}=kq_1q_2\frac{\rhat_{12}}{r^2}$$
 
@@ -102,6 +106,8 @@ To find $\rhat_{12}$,
   \item $\rhat_{12}=\bfvec{r}_{12}/r$, where $r=\sqrt{r_x^2+r_y^2}$.
 
 \end{enumerate}
+
+\subsection{Electric Field}
 
 The equation for electric field using a unit vector $\rhat$ is
 
@@ -143,17 +149,19 @@ Charge $q_1$ is at $(x,y)=(-a,-a)$ and charge $q_2$ is at $(a, a)$. Find
 
 \input{figures/Two_Charges.tikz}
 
-$\bfvec{r}_{12}=r\cos(45^\circ)\ihat + r\sin(45^\circ)\jhat$, $\ds\rhat_{12}=\frac{\bfvec{r}}{r}=\cos(45^\circ)\ihat +\sin(45^\circ)\jhat$
+The sides of the right triangle have length $2a$, so the hypotenuse $r=\sqrt{(2a)^2+(2a)^2}=\sqrt{8}a$. 
 
-Note that the magnitude of $\rhat_{12}=1$: $|\rhat_{12}|=\sqrt{\cos^2(45^\circ)+\sin^2(45^\circ)}=1$
+From the diagram, $\bfvec{r}_{12}=2a\ihat + 2a\jhat$, so $\ds\rhat_{12}=\frac{\bfvec{r}_{12}}{r}=\frac{1}{\sqrt{2}}\ihat + \frac{1}{\sqrt{2}}\jhat$
 
-The sides of the right triangle have length $2a$, so the hypotenuse $r=\sqrt{8}a$. Substitution gives
+Note that the magnitude of $\rhat_{12}=1$: $|\rhat_{12}|=\sqrt{(1/2)^2+(1/2)^2}=1$
 
-$$\bfvec{F}_{q_1\text{ on }q_2}=kq_1q_2\frac{\rhat_{12}}{r^2} = \frac{kq_1q_2}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat) =\frac{kq_1q_2}{8a^2}\left[\frac{1}{\sqrt{2}}\ihat + \frac{1}{\sqrt{2}}\jhat\right]$$
+Substitution gives
+
+$$\bfvec{F}_{q_1\text{ on }q_2}=kq_1q_2\frac{\rhat_{12}}{r^2} = \frac{kq_1q_2}{8a^2}\left[\frac{1}{\sqrt{2}}\ihat + \frac{1}{\sqrt{2}}\jhat\right]$$
 
 Check: if $q_1$ and $q_2$ are both positive or both negative, the force on $q_2$ is upwards and to the right, as expected.
 
-To calculate $|\bfvec{F}|$, we can use $|\bfvec{F}|=F=\sqrt{F_x^2+F_y^2}$ and plug in $F_x=k\frac{q_1q_2}{8a^2}\frac{1}{\sqrt{2}}$ and $E_y=k\frac{q_1q_2}{8a^2}\frac{1}{\sqrt{2}}$ and use $\sqrt{c^2}=|c|$ (where $c$ is a real number) to show that $F=k|q_1q_2|/{8a^2}$. There is an easier way. Taking the magnitude of both sides of
+To calculate $|\bfvec{F}|$, we can use $|\bfvec{F}|=F=\sqrt{F_x^2+F_y^2}$ and plug in $F_x=k\frac{q_1q_2}{8a^2}\frac{1}{\sqrt{2}}$ and $F_y=k\frac{q_1q_2}{8a^2}\frac{1}{\sqrt{2}}$ and use $\sqrt{c^2}=|c|$ (where $c$ is a real number) to show that $F=k|q_1q_2|/{8a^2}$. There is an easier way. Taking the magnitude of both sides of
 
 $\ds\bfvec{F}=kq_2q_1\frac{\rhat}{r^2}\quad$
 gives
@@ -185,11 +193,15 @@ $r = \sqrt{5}a$
 
 $\bfvec{r}_{12}=2a\ihat-a\jhat$
 
-$\rhat_{12}=\bfvec{r}_{12}/r=\frac{2}{\sqrt{5}}\ihat-\frac{1}{\sqrt{5}}\jhat$
+    \begin{enumerate}
 
-$\ds\bfvec{F}_{q_1\text{ on }q_2}=kq_1q_2\frac{\rhat_{12}}{r^2}=\frac{kq_1q_2}{5a^2}\left(\frac{2}{\sqrt{5}}\ihat-\frac{1}{\sqrt{5}}\jhat\right)$
+      \item $\rhat_{12}=\bfvec{r}_{12}/r=\frac{2}{\sqrt{5}}\ihat-\frac{1}{\sqrt{5}}\jhat$
 
-$\ds F_{q_1\text{ on }q_2} = k|q_1q_2|\frac{1}{r^2}= k|q_1q_2|\frac{1}{5a^2}$
+      \item $\ds\bfvec{F}_{q_1\text{ on }q_2}=kq_1q_2\frac{\rhat_{12}}{r^2}=\frac{kq_1q_2}{5a^2}\left(\frac{2}{\sqrt{5}}\ihat-\frac{1}{\sqrt{5}}\jhat\right)$
+
+      \item $\ds F_{q_1\text{ on }q_2} = k|q_1q_2|\frac{1}{r^2}= k|q_1q_2|\frac{1}{5a^2}$
+
+    \end{enumerate}
 \else
 
 \input{../Electric_Force/figures/grid.tikz}
@@ -217,9 +229,7 @@ The calculation of $\rhat$ is the same as that shown in the diagram Example I (e
 
 Substitution gives
 
-$$\bfvec{E}_{\text{at }(a,a)\text{ due to }q_1}=kq_1\frac{\rhat}{r^2} = kq_1\frac{1}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat) =\frac{kq_1}{8a^2}\left[\frac{1}{\sqrt{2}}\ihat + \frac{1}{\sqrt{2}}\jhat\right]$$
-
-(Notice the relationship between the answers to this problem and the answers to Example I.)
+$$\bfvec{E}_{\text{at }(a,a)\text{ due to }q_1}=kq_1\frac{\rhat}{r^2} =\frac{kq_1}{8a^2}\left[\frac{1}{\sqrt{2}}\ihat + \frac{1}{\sqrt{2}}\jhat\right]$$
 
 Check: If a positive charge was placed at $(x,y)=(a,a)$, it would tend to move up and to the right, which is consitent with the signs on the components of the electric field found above.
 
@@ -236,6 +246,8 @@ $\quad\ds|\bfvec{E}|=k|q_1|\frac{|\rhat|}{r^2}$.
 The magnitude of a unit vector is $1$, so
 
 $\ds|\bfvec{E}|=k|q_1|\frac{1}{r^2}=\frac{k|q_1|}{8a^2}$.
+
+(Notice the relationship between the answers to this problem and the answers to Example I.)
 
 \newpage
 
@@ -262,11 +274,15 @@ $r = \sqrt{5}a$
 
 $\bfvec{r}_{12}=2a\ihat-a\jhat$
 
-$\rhat_{12}=\bfvec{r}_{12}/r=\frac{2}{\sqrt{5}}\ihat-\frac{1}{\sqrt{5}}\jhat$
+    \begin{enumerate}
 
-$\ds\bfvec{E}=kq_1\frac{\rhat}{r^2}=\frac{kq_1}{5a^2}\left(\frac{2}{\sqrt{5}}\ihat-\frac{1}{\sqrt{5}}\jhat\right)$
+      \item $\rhat_{12}=\bfvec{r}_{12}/r=\frac{2}{\sqrt{5}}\ihat-\frac{1}{\sqrt{5}}\jhat$
 
-$\ds E = k|q_1|\frac{1}{r^2}= k|q_1|\frac{1}{5a^2}$
+      \item $\ds\bfvec{E}=kq_1\frac{\rhat}{r^2}=\frac{kq_1}{5a^2}\left(\frac{2}{\sqrt{5}}\ihat-\frac{1}{\sqrt{5}}\jhat\right)$
+
+      \item $\ds E = k|q_1|\frac{1}{r^2}= k|q_1|\frac{1}{5a^2}$
+
+    \end{enumerate}
 \else
 
 \input{../Electric_Force/figures/grid.tikz}
@@ -296,11 +312,25 @@ If $q_1$ is at $(x,y)=(a,0)$ and the point where we want to compute $\bfvec{E}$ 
 
 \begin{enumerate}
 
-  \item $\rhat$
+  \item[2.] $\rhat$
 
-  \item $\rhat$
+  \item[3.] $r$
 
-  \item $r$
+\end{enumerate}
+
+\subsection{Finding $\rhat$ given positions in polar form}
+
+Charge $q_1$ is a distance $a$ from the origin and at an angle of $45^\circ$ from the $+x$ axis (counterclockwise positive).
+
+Charge $q_2$ is a distance $2a$ from the origin and at an angle of $135^\circ$ from the $+x$ axis (counterclockwise positive).
+
+Find
+
+\begin{enumerate}
+
+  \item $\rhat_{12}$
+
+  \item $\rhat_{21}$
 
 \end{enumerate}
 
