Elec force update

--- a/Electric_Force/Electric_Force.tex
+++ b/Electric_Force/Electric_Force.tex
@@ -124,21 +124,15 @@ Charge $q_1$ is at $(x,y)=(-a,-a)$ and charge $q_2$ is at $(a, a)$. Both charges
 
   \item 
 
-        p1
+        \textbf{p1}: The magnitude will not change (it is by definition a positive number).
 
-        The magnitude will not change (it is by definition a positive number).
+        \textbf{p2}: The force vectors will reverse direction as shown on the left in the following diagram. The angle of $F_{1\mbox{ on } 2}$ is $225^\circ$ with respect to the $+x$ axis with counterclockwise positive.
 
-        p2
-
-        The force vectors will reverse direction as shown on the left in the following diagram. The angle of $F_{1\mbox{ on } 2}$ is $225^\circ$ with respect to the $+x$ axis with counterclockwise positive.
-
-        p3.
-
-        When the angle $\theta$ of a vector $\bfvec{V}$ is given with respect to $+x$--axis, it can be written in component form without using a diagram using the formula $\bfvec{V} = V\cos\theta\ihat + V\sin\theta\jhat$. Thus,
+        \textbf{p3}: When the angle $\theta$ of a vector $\bfvec{V}$ is given with respect to $+x$--axis, it can be written in component form without using a diagram using the formula $\bfvec{V} = V\cos\theta\ihat + V\sin\theta\jhat$. Thus,
 
         $\bfvec{F}_{1\mbox{ on } 2} = F\cos 225^\circ \ihat + F\sin 225^\circ \jhat$.
 
-        Alternatively, the diagram on the right of the following figure shows the calculation of $\bfvec{F}_{1\mbox{ on } 2}$ using a different angle and manually inserting the signs of the components based on the diagram. The result is
+        Alternatively, the diagram on the right of the following figure shows the calculation of $\bfvec{F}_{1\mbox{ on } 2}$ using an acute angle and manually inserting the signs of the components based on the diagram. The result is
 
         $\bfvec{F}_{1\mbox{ on } 2} = -F\cos 45^\circ \ihat - F\sin 45^\circ \jhat$.
 
@@ -148,13 +142,11 @@ Charge $q_1$ is at $(x,y)=(-a,-a)$ and charge $q_2$ is at $(a, a)$. Both charges
 
         \input{figures/Two_Charges-b.tikz}
 
-  \item The magnitude is the same, as before. The charges repel, so the direction is the same as in the answer to 2. and the force vector is the same as the answer to 3.
-
-        \ifsolutions
-        \newpage
-        \fi
+  \item Answers to 1.--3. are the same.
 
 \end{enumerate}
+
+\newpage
 
 \section{Problem I}
 
@@ -189,12 +181,13 @@ Charge $q_1$ is at $(x,y)=(-a,a)$ and charge $q_2$ is at $(a, -a)$. Both charges
 
             $\bfvec{F}_{1\mbox{ on } 2} = F_{1\mbox{ on } 2}(\cos 45^\circ \ihat - \sin 45^\circ \jhat)$
 
-      \item p1. No change.
+      \item \textbf{p1} No change.
 
-            p2. $+135^\circ$
+            \textbf{p2} $+135^\circ$
 
-                p3. 
-                   $\bfvec{F}_{1\mbox{ on } 2} = F_{1\mbox{ on } 2}(\cos 135^\circ \ihat + \sin 135^\circ \jhat)$
+            \textbf{p3}
+
+            $\bfvec{F}_{1\mbox{ on } 2} = F_{1\mbox{ on } 2}(\cos 135^\circ \ihat + \sin 135^\circ \jhat)$
 
             or
 
@@ -234,6 +227,8 @@ Answer the questions 1.--3. of Problem I in the previous problem for charge $q_1
 \input{figures/grid.tikz}
 \fi
 
+\newpage
+
 \section{Problem III}
 
 Answer questions 1.--3. of Problem I for charge $q_1$ is at $(x,y)=(-a,0)$ and charge $q_2$ is at $(0, 3a)$. Charge $q_1$ has a charge of $-q$. Charge $q_2$ has a charge of $+q$.
@@ -261,6 +256,8 @@ Answer questions 1.--3. of Problem I for charge $q_1$ is at $(x,y)=(-a,0)$ and c
             $\ds\bfvec{F}_{1\mbox{ on } 2} = F\left(-\frac{1}{\sqrt{10}}\ihat - \frac{3}{\sqrt{10}}\jhat\right)$
 
     \end{enumerate}
+
+\newpage
 \else
 
 \input{figures/grid.tikz}
