--- a/Vectors/Vectors.tex
+++ b/Vectors/Vectors.tex
@@ -90,11 +90,15 @@ A vector $\bfvec{F}$ has a magnitude of $2$ and makes an angle of $30^\circ$ wit
 \end{enumerate}
 
 \ifsolutions
-\textbf{Answer}
+\textbf{Solution}
 
     \begin{enumerate}
 
-      \item[2.] $\bfvec{F} = 2\cos(30^\circ)\ihat + 2\sin(30^\circ)\jhat=\sqrt{3}\ihat + \jhat$, where $\cos(30^\circ)=\sqrt{3}/2$ and $\sin(30^\circ)=1/2$ was used in the last step.
+      \item 
+
+            \input{figures/VectorsI.tikz}
+
+      \item $\bfvec{F} = 2\cos(30^\circ)\ihat + 2\sin(30^\circ)\jhat=\sqrt{3}\ihat + \jhat$, where $\cos(30^\circ)=\sqrt{3}/2$ and $\sin(30^\circ)=1/2$ was used in the last step.
 
     \end{enumerate}
 \else
@@ -117,11 +121,17 @@ Given $\bfvec{F}=3\ihat -4\jhat$, find
 \end{enumerate}
 
 \ifsolutions
+\textbf{Solution}
+
     \begin{enumerate}
 
-      \item[2.] $F=\sqrt{3^2+4^2}=5$
+      \item 
 
-      \item[3.] $\theta = 360^\circ - \tan^{-1}(4/3)\simeq 307^\circ$
+            \input{figures/VectorsII.tikz}
+
+      \item $F=\sqrt{3^2+4^2}=5$
+
+      \item $\ds\theta = 360^\circ - \phi = 360^\circ - \frac{180}{\pi}\tan^{-1}(4/3)\simeq 307^\circ$
 
     \end{enumerate}
 \else
