--- a/Vectors/Vectors.tex
+++ b/Vectors/Vectors.tex
@@ -108,7 +108,7 @@ A vector $\bfvec{F}$ has a magnitude of $2$ and makes an angle of $30^\circ$ wit
 
 \section{Problem II}
 
-Given $\bfvec{F}=3\ihat -4\jhat$, find
+Given $\bfvec{F}=3\ihat - 4\jhat$,
 
 \begin{enumerate}
 
