--- a/Electric_Force/Electric_Force.tex
+++ b/Electric_Force/Electric_Force.tex
@@ -80,7 +80,7 @@
 % Figures:
 % https://www.mathcha.io/editor/M55KMuQLiLmH9Vgp0Ptw6QGB3HnpzJnnuM6VoB7
 
-\section{Coulomb's Law}
+\section{Introduction -- Coulomb's Law}
 
 \emph{Magnitude}
 
@@ -88,7 +88,7 @@ $$F_{1\mbox{ on } 2}=F_{2\mbox{ on } 1}=k\frac{|q_1q_2|}{r^2}$$
 
 where $r$ is the distance between $q_1$ and $q_2$. To simplify notation, we are using $k$ in place of $1/4\pi\epsilon_o$. Note that by definition, the magnitude of a vector is positive, which is the reason for the use of the absolute value.
 
-\emph{Direction}: Along line that connects $q_1$ and $q_2$. Direction depends on signs of $q_1$ and $q_2$. (Likes repel, opposites attract.).
+\emph{Direction}: Along line that connects $q_1$ and $q_2$. The direction depends on signs of $q_1$ and $q_2$. (Likes repel, opposites attract.).
 
 \section{Example}
 
@@ -114,11 +114,11 @@ Charge $q_1$ is at $(x,y)=(-a,-a)$ and charge $q_2$ is at $(a, a)$. Both charges
 
   \item The distance between the charges is $r=\sqrt{(2a)^2+(2a)^2}=\sqrt{8a^2}$, so
 
-        $$F_{1\mbox{ on } 2}=k\frac{|q_1q_2|}{r^2}=\frac{k|qq|}{(\sqrt{8a^2})^2}=\frac{kq^2}{8a^2}$$
+        $F_{1\mbox{ on } 2}=k\frac{|q_1q_2|}{r^2}=\frac{k|qq|}{(\sqrt{8a^2})^2}=\frac{kq^2}{8a^2}$
 
   \item The charges will repel each other, so the direction of forces of one on the other will be as shown in the left part of the following diagram. The angle of $F_{1\mbox{ on } 2}$ is $+45^\circ$ with respect to the $+x$--axis with counterclockwise positive.
 
-        \input{figures/Two_Charges-a.tikz?1692120532733}
+        \input{figures/Two_Charges-a.tikz}
 
   \item Let $F = F_{1\mbox{ on } 2}$ from part 1. to simplify notation. The right part of the above diagram shows the calculation of the components $F_x$ and $F_y$, from which it follows that $\bfvec{F} = F\cos 45^\circ \ihat + F\sin 45^\circ \jhat$.
 
@@ -126,7 +126,7 @@ Charge $q_1$ is at $(x,y)=(-a,-a)$ and charge $q_2$ is at $(a, a)$. Both charges
 
         \textbf{p1}: The magnitude will not change (it is by definition a positive number).
 
-        \textbf{p2}: The force vectors will reverse direction as shown on the left in the following diagram. The angle of $F_{1\mbox{ on } 2}$ is $225^\circ$ with respect to the $+x$ axis with counterclockwise positive.
+        \textbf{p2}: The force vectors will reverse direction as shown on the left in the following diagram. The angle of $F_{1\mbox{ on } 2}$ is $180^\circ+45^\circ=225^\circ$ with respect to the $+x$ axis with counterclockwise positive.
 
         \textbf{p3}: When the angle $\theta$ of a vector $\bfvec{V}$ is given with respect to $+x$--axis, it can be written in component form without using a diagram using the formula $\bfvec{V} = V\cos\theta\ihat + V\sin\theta\jhat$. Thus,
 
@@ -224,7 +224,7 @@ Answer the questions 1.--3. of Problem I for charge $q_1$ at $(x,y)=(-a,a)$ and 
 
             $\bfvec{F}_{1\mbox{ on } 2} = F_{1\mbox{ on } 2}(\sin \phi \ihat - \cos \phi\jhat)$
 
-            Alternatively, from the diagram on the right, $\sin\theta = 2a/\sqrt{5}a$ and $\cos\theta = 1a/\sqrt{5}a$, so
+            Alternatively, from the diagram on the right, $\sin\phi = 2a/\sqrt{5}a$ and $\cos\phi = 1a/\sqrt{5}a$, so
 
             $\ds\bfvec{F}_{1\mbox{ on } 2} = F_{1\mbox{ on } 2}\left(\frac{2}{\sqrt{5}}\ihat - \frac{1}{\sqrt{5}}\jhat\right)$.
 
